post notice functioning

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nycda-new-bookshelf",
+  "name": "nycda-new-noticeshelf",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
